# eos-photos

./: .gitignore  COPYING  Makefile.am  README.md  autogen.sh  build.sh  build_mo_from_po_files.sh  configure.ac  endless-os-photos  eos-photos  eos-photos.in  generate-filter-thumbnails  generate-filter-thumbnails.in  generate_filter_thumbnails.py  generate_pot_file.sh  install_fonts.sh  merge_pot_file_with_po_files.sh  python-skimage-lib_0.6.1-1_amd64.deb  python-skimage-lib_0.6.1-1_i386.deb  python-skimage_0.6.1-1_all.deb
.tx/: config
data/: com.endlessm.photos.appdata.xml  com.endlessm.photos.desktop  com.endlessm.photos.gschema.xml  com.endlessm.photos.service.in  credits.json  endless_photos.css  endless_photos.gresource.xml  photos.desktop
debian/: .gitignore  changelog  control  copyright  endless-os-photos.install  install  lintian-overrides  rules
flatpak/: com.endlessm.photos.json  python3-Pillow.json
po/: Makevars  POTFILES.in  af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  csb.po  cy.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  endless_photos.pot  eo.po  eos-photos.pot  es.po  es_GT.po  et.po  eu.po  fa.po  fi.po  fil.po  fr.po  fur.po  (+82 more)
src/: __init__.py  asyncworker.py  crop_overlay.py  draggable_box.py  drop_shadow_alignment.py  endless_photos.py  generate_filter_thumbnails.py  image_text_button.py  make_filter_icons.py  photos_adjustment_toolbar.py  photos_adjustments.py  photos_blur_toolbar.py  photos_border_toolbar.py  photos_category_toolbars.py  photos_distort_toolbar.py  photos_filter_toolbar.py  photos_image_container.py  photos_image_viewer.py  photos_image_widget.py  photos_left_toolbar.py  photos_model.py  photos_photo_displayer.py  photos_presenter.py  photos_right_toolbar.py  photos_top_toolbar.py  photos_view.py  photos_window.py  pil_test.py  resource_prefixes.py  social_bar_model.py  util.py  (+4 more)
(+32 files in other folders)
